user database is managed